--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           <button type="button" class=" btn-primary bg-white text-stone-950 ">
             Projects
           </button>
-          <a href="src/assets/Geninho_CV.pdf" download="Geninho_CV.pdf" class="btn-primary text-white flex justify-center items-center">
+          <a href="src/assets/Geninho_CV.pdf" download="Geninho_CV.pdf"
+            class="btn-primary text-white flex justify-center items-center">
             Download CV
           </a>
 
@@ -216,9 +217,14 @@
 
     <footer class="flex flex-col gap-4 mt-[128px] text-center mb-[32px]">
       <div class="flex flex-row gap-4 justify-center">
-        <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do GitHub 1.svg" alt="" />
-        <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Instagram 1.svg" alt="" />
-        <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do LinkedIn 1.svg" alt="" />
+        <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do GitHub 1.svg"
+          alt="GitHub logo icon, stylized white cat silhouette inside a circle, representing a link to the GitHub profile" />
+        <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Dribbble.svg"
+          alt="Dribbble logo icon, stylized basketball with intersecting lines, representing a link to the Dribbble profile" />
+        <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Instagram 1.svg"
+          alt="Instagram logo icon, rounded square camera symbol, representing a link to the Instagram profile" />
+        <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do LinkedIn 1.svg"
+          alt="LinkedIn logo icon, stylized letters in a blue square, representing a link to the LinkedIn profile" />
       </div>
       <div>
         <p class="uppercase font-secondary">Copyright © 2025 gen1nh</p>
