--- a/projects.html
+++ b/projects.html
@@ -53,18 +53,21 @@
                     </nav>
 
                     <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,574px))] gap-6 justify-center">
-                        
-                        
+
+
                         <a href="https://dribbble.com/shots/26517507-M-dulo-Refeit-rio-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=M%C3%B3dulo%20Refeit%C3%B3rio%20%E2%80%93%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=M%C3%B3dulo%20Refeit%C3%B3rio%20%E2%80%93%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share"
-                            target="_blank" rel="noopener" class="block" title="Módulo Refeitório – App UI Design in Figma">
+                            target="_blank" rel="noopener" class="block"
+                            title="Módulo Refeitório – App UI Design in Figma">
                             <div
                                 class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                                <img src="src/assets/01.png" class="w-full rounded-xl" alt="Módulo Refeitório – App UI Design in Figma">
+                                <img src="src/assets/01.png" class="w-full rounded-xl"
+                                    alt="Módulo Refeitório – App UI Design in Figma">
                             </div>
                         </a>
 
                         <!-- card 02 -->
-                        <a href="https://dribbble.com/shots/26517476-e-agro-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share" target="_blank" class="block" title="e-agro App UI Design in Figma">
+                        <a href="https://dribbble.com/shots/26517476-e-agro-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share"
+                            target="_blank" class="block" title="e-agro App UI Design in Figma">
                             <div
                                 class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
                                 <img src="src/assets/02.png" class="w-full rounded-xl" alt="">
@@ -96,10 +99,10 @@
 
         <footer class="flex flex-col gap-4 mt-[128px] text-center mb-[32px]">
             <div class="flex flex-row gap-4 justify-center">
-                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do GitHub 1.svg" alt="" />
-                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Instagram 1.svg" alt="" />
-                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do LinkedIn 1.svg" alt="" />
-                <img src="src/assets/dribbble-svgrepo-com.svg" alt="" />
+                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do GitHub 1.svg" alt="GitHub logo icon, stylized white cat silhouette inside a circle, representing a link to the GitHub profile" />
+                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Dribbble.svg" alt="Dribbble logo icon, stylized basketball with intersecting lines, representing a link to the Dribbble profile" />
+                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Instagram 1.svg" alt="Instagram logo icon, rounded square camera symbol, representing a link to the Instagram profile" />
+                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do LinkedIn 1.svg" alt="LinkedIn logo icon, stylized letters in a blue square, representing a link to the LinkedIn profile" />
             </div>
             <div>
                 <p class="uppercase font-secondary">Copyright © 2025 gen1nh</p>
