--- a/about-me.html
+++ b/about-me.html
@@ -232,20 +232,10 @@
                 </div>
             </section>
         </main>
-
-        <footer class="flex flex-col gap-4 mt-[128px] text-center mb-[32px]">
-            <div class="flex flex-row gap-4 justify-center">
-                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do GitHub 1.svg" alt="" />
-                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Instagram 1.svg" alt="" />
-                <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do LinkedIn 1.svg" alt="" />
-            </div>
-            <div>
-                <p class="uppercase font-secondary">Copyright © 2025 gen1nh</p>
-            </div>
-        </footer>
     </div>
-
-    <script src="src/js/menu.js"></script>
+    
+  <script src="src/js/main.js" type="module" defer></script>
+  <script src="src/components/menu.js"></script>
 </body>
 
 </html>
