--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
 <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
   <div class="main-wrapper max-w-[1280px] px-[14px] mt-[32px] m-auto">
 
+    <div class="flex flex-row justify-end md:hidden">
+      <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/menu/link.svg" alt="menu-hamburguer" />
+    </div>
+
+    <div id="menu-sair" class="hidden md:block md:py-[24px]">
+      <div class="self-center">
+        <ul class="flex flex-col items-center gap-2 md:flex-row md:justify-end text-center">
+          <li class="btn-links"><a href="index.html">Home</a></li>
+          <li class="btn-links"><a href="projects.html">Projects</a></li>
+          <li class="btn-links"><a href="about-me.html">About-me</a></li>
+          <img class="w-[24px]" src="src/assets/menu/dark.svg" alt="Dark mode icon">
+        </ul>
+
+      </div>
+    </div>
+
     <main>
       <div class="flex flex-col gap-6 mb-[64px]">
         <h1
@@ -91,7 +107,7 @@
                   <img src="src/assets/skills/python.svg" alt="Python Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/java.svg" alt="Java Logo" />
+                  <img src="src/assets/skills/java" alt="Java Logo" />
                 </div>
                 <div class="swiper-slide">
                   <img src="src/assets/skills/php.svg" alt="Php Logo" />
