--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <img src="src/assets/skills/python.svg" alt="Python Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/java" alt="Java Logo" />
+                  <img src="src/assets/skills/java.svg" alt="Java Logo" />
                 </div>
                 <div class="swiper-slide">
                   <img src="src/assets/skills/php.svg" alt="Php Logo" />
