--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
-  <div class="main-wrapper max-w-[1280px] px-[14px] mt-[32px] m-auto">
+  <div class="main-wrapper max-w-[1000px] px-[14px] mt-[32px] m-auto">
 
-    <div class="flex flex-row justify-end md:hidden">
+    <div class="flex flex-row justify-end max-w-[1280px] md:hidden">
       <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/menu/link.svg" alt="menu-hamburguer" />
     </div>
 
@@ -36,7 +36,7 @@
     <main>
       <div class="flex flex-col gap-6 mb-[64px]">
         <h1
-          class="text-7xl mt-[96px] font-semibold font-primary text-center sm:text-[122px] md:text-[152px] lg:text-[192px]">
+          class="text-7xl mt-[96px] font-semibold font-primary text-center sm:text-[122px] md:text-[152px] lg:text-[192px] text-pink">
           GENINHO
         </h1>
         <p
@@ -144,8 +144,8 @@
 
         <section class="mt-[100px]">
           <h2 class="text-4xl font-semibold text-center mb-[32px]">My Expertise</h2>
-          <div class="flex flex-col gap-10 xl:flex-row">
-            <div class="border-2 border-gray-600">
+          <div class="flex flex-col justify-around gap-7 xl:flex-row">
+            <div class="border-2 border-gray-600 xl:max-w-[330px]">
               <div class="relative">
                 <div class="flex gap-6 py-[44px] px-[36px]">
                   <img src="src/assets/cards-skills/ux-ui.svg" alt="" />
@@ -161,14 +161,14 @@
               <div class="mb-[44px]">
                 <span class="block mx-[32px] mb-[4px] text-gray-600">&lt;h3&gt;</span>
                 <p class="border-l-2 border-gray-600 px-4 font-secondary font-normal text-[16px] mx-[49px]">
-                  Wireframing,Prototyping, UI/UX,
+                  Wireframing, <br>Prototyping, UI/UX,
                   Design Systems, Figma, LottieFilles.
                 </p>
                 <span class="block mx-[32px] mt-[4px] text-gray-600">&lt;/h3&gt;</span>
               </div>
             </div>
 
-            <div class="border-2 border-gray-600">
+            <div class="border-2 border-gray-600 xl:max-w-[328px]">
               <div class="relative">
                 <div class="flex gap-6 py-[44px] px-[36px]">
                   <img src="src/assets/cards-skills/react.svg" alt="" />
