--- a/about-me.html
+++ b/about-me.html
@@ -39,17 +39,17 @@
             <section>
                 <div class="flex flex-col gap-[124px]">
                     <!-- Hero -->
-                    <div class="flex justify-between">
+                    <div class="flex flex-col-reverse md:flex-row justify-between self-center md:self-auto">
                         <div class="flex flex-col self-center gap-[16px]">
-                            <h1 class="font-semibold text-[64px] leading-[74px]">
+                            <h1 class="font-semibold text-[64px] leading-[74px] text-center md:text-start">
                                 Hi, I'm <br />
                                 <span class="text-pink-300">GENINHO :) </span>
                             </h1>
-                            <p class="uppercase tracking-[2.2px]">
+                            <p class="text-center md:text-start uppercase tracking-[2.2px]">
                                 ux|ui design, Front end & App Developer.
                             </p>
 
-                            <div class="flex flex-col md:flex-row gap-[16px]">
+                            <div class="flex justify-center md:flex-row md:justify-start gap-[16px]">
                                 <button type="button" class="btn-primary bg-white text-stone-950">
                                     Projects
                                 </button>
@@ -60,8 +60,8 @@
                             </div>
                         </div>
 
-                        <div>
-                            <img class="border-2 rounded-full border-pink-300"
+                        <div class="self-center">
+                            <img class="border-2 rounded-full border-pink-300 mb-6"
                                 src="src/assets/img-profile/profile-dark.png" alt="" />
                         </div>
                     </div>
