Hotfix: ajustando bug nas imagens das skills

--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
                   <img src="src/assets/skills/tailwind.svg" alt="Tailwind CSS Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/Sass.svg" alt="Sass Logo" />
+                  <img src="src/assets/skills/sass1.svg" alt="Sass Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/Git.svg" alt="Git Logo" />
+                  <img src="src/assets/skills/git1.svg" alt="Git Logo" />
                 </div>
               </div>
             </div>
             <div class="swiper mySwiper2">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/React.svg" alt="React Logo" />
+                  <img src="src/assets/skills/react1.svg" alt="React Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/react-native.svg" alt="React Native Logo" />
+                  <img src="src/assets/skills/react-native1.svg" alt="React Native Logo" />
                 </div>
                 <div class="swiper-slide">
                   <img src="src/assets/skills/c++.svg" alt="C++ Logo" />
@@ -113,14 +113,14 @@
                   <img src="src/assets/skills/php.svg" alt="Php Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/NodeJs.svg" alt="NodeJs Logo" />
+                  <img src="src/assets/skills/nodejs1.svg" alt="NodeJs Logo" />
                 </div>
               </div>
             </div>
             <div class="swiper mySwiper3">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/Figma.svg" alt="Figma Logo" />
+                  <img src="src/assets/skills/figma1.svg" alt="Figma Logo" />
                 </div>
                 <div class="swiper-slide">
                   <img src="src/assets/skills/photoshop.svg" alt="photshop Logo" />
@@ -132,7 +132,7 @@
                   <img src="src/assets/skills/ilustrator.svg" alt="ilustrator Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/Blender.svg" alt="Blender Logo" />
+                  <img src="src/assets/skills/blender1.svg" alt="Blender Logo" />
                 </div>
                 <div class="swiper-slide">
                   <img src="src/assets/skills/cinema4d.svg" alt="cinema4d Logo" />
