--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,15 @@
 </head>
 
 <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
-    <div class="main-wrapper max-w-[1000px] px-[14px] mt-[32px] m-auto">
+
+<loading-screen
+  src="src/assets/lottie/loading - chemistry.json"
+  width="180"
+  height="180"
+  speed="1">
+</loading-screen>
+
+    <div id="content" class="hidden opacity-0 transition-opacity duration-700 main-wrapper max-w-[1000px] px-4 mt-8 m-auto">
         <div class="flex flex-row justify-end max-w-[1280px] md:hidden">
             <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/menu/link.svg"
                 alt="menu-hamburguer" />
@@ -259,6 +267,9 @@
     </main>
     </div>
 
+
+      <script type="module" src="src/components/loading-screen.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="src/js/main.js" type="module" defer></script>
     <script src="src/components/swiper.js"></script>
