Hotfix: bug no icon de fechar menu

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div id="content"
     class="hidden opacity-0 transition-opacity duration-700 main-wrapper max-w-[1000px] px-4 mt-8 m-auto">
     <div class="flex flex-row justify-end max-w-[1280px] md:hidden">
-      <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/menu/link.svg" alt="menu-hamburguer" />
+      <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/menu/menu.svg" alt="menu-hamburguer" />
     </div>
 
     <div id="menu-sair" class="hidden md:block md:py-[24px]">
