--- a/projects.html
+++ b/projects.html
@@ -1,159 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About-me | Geninho</title>
-    <link rel="icon" type="icon" href="src/assets/favicon/favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-    <link rel="stylesheet" href="src/css/style.css" />
-  </head>
 
-  <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About-me | Geninho</title>
+  <link rel="icon" type="icon" href="src/assets/favicon/favicon.ico" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="src/css/style.css" />
+</head>
 
-<loading-screen
-  src="src/assets/lottie/loading - chemistry.json"
-  width="180"
-  height="180"
-  speed="1">
-</loading-screen>
+<body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
 
-    <div id="content" class="hidden opacity-0 transition-opacity duration-700 main-wrapper max-w-[1000px] px-[14px] mt-[32px] m-auto">
-      <div class="flex flex-row justify-end max-w-[1000px] md:hidden">
-        <img
-          id="menu-toggle-icon"
-          class="w-[56px] cursor-pointer"
-          src="src/assets/menu/link.svg"
-          alt="menu-hamburguer"
-        />
-      </div>
+  <loading-screen src="src/assets/lottie/loading - chemistry.json" width="180" height="180" speed="1">
+  </loading-screen>
 
-      <div id="menu-sair" class="hidden md:block md:py-[24px]">
-        <div class="self-center">
-          <ul
-            class="flex flex-col items-center gap-2 md:flex-row md:justify-end text-center"
-          >
-            <li class="btn-links"><a href="index.html">Home</a></li>
-            <li class="btn-links"><a href="projects.html">Projects</a></li>
-            <li class="btn-links"><a href="about-me.html">About-me</a></li>
-            <img
-              class="w-[24px]"
-              src="src/assets/menu/dark.svg"
-              alt="Dark mode icon"
-            />
-          </ul>
-        </div>
-      </div>
-
-      <main>
-        <section>
-          <div class="flex flex-col gap-[32px]">
-            <h1
-              class="font-semibold text-3xl md:text-4xl mb-2 md:mb-6 lg:mt-[120px] lg:text-5xl"
-            >
-              Projects
-            </h1>
-            <nav class="mb-2 flex flex-col">
-              <ul
-                class="overflow-x-auto whitespace-nowrap w-full justify-around md:justify-center flex flex-row"
-              >
-                <li class="btn-links-projects">All</li>
-                <li class="btn-links-projects">Projects</li>
-                <li class="btn-links-projects">UI/UX</li>
-                <li class="btn-links-projects">Front-end</li>
-                <li class="btn-links-projects">Mobile (React Native)</li>
-                <li class="btn-links-projects">Ilustrations</li>
-              </ul>
-            </nav>
-
-            <div
-              class="grid grid-cols-[repeat(auto-fit,minmax(300px,474px))] gap-6 justify-center"
-            >
-              <a
-                href="https://dribbble.com/shots/26517507-M-dulo-Refeit-rio-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=M%C3%B3dulo%20Refeit%C3%B3rio%20%E2%80%93%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=M%C3%B3dulo%20Refeit%C3%B3rio%20%E2%80%93%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share"
-                target="_blank"
-                rel="noopener"
-                class="block"
-                title="Módulo Refeitório – App UI Design in Figma"
-              >
-                <div
-                  class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse"
-                >
-                  <img
-                    src="src/assets/cards-projects/01.png"
-                    class="w-full rounded-xl"
-                    alt="Módulo Refeitório – App UI Design in Figma"
-                  />
-                </div>
-              </a>
-
-              <!-- card 02 -->
-              <a
-                href="https://dribbble.com/shots/26517476-e-agro-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share"
-                target="_blank"
-                class="block"
-                title="e-agro App UI Design in Figma"
-              >
-                <div
-                  class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse"
-                >
-                  <img
-                    src="src/assets/cards-projects/02.png"
-                    class="w-full rounded-xl"
-                    alt=""
-                  />
-                </div>
-              </a>
-
-              <!-- card 03 -->
-              <a href="#" class="block" title="Project 3">
-                <div
-                  class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse"
-                >
-                  <img
-                    src="src/assets/cards-projects/03.png"
-                    class="w-full rounded-xl"
-                    alt=""
-                  />
-                </div>
-              </a>
-
-              <!-- card 04 -->
-              <a href="#" class="block" title="Project 4">
-                <div
-                  class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse"
-                >
-                  <img
-                    src="src/assets/cards-projects/04.png"
-                    class="w-full rounded-xl"
-                    alt=""
-                  />
-                </div>
-              </a>
-            </div>
-          </div>
-        </section>
-      </main>
+  <div id="content"
+    class="hidden opacity-0 transition-opacity duration-700 main-wrapper max-w-[1000px] px-[14px] mt-[32px] m-auto">
+    <div class="flex flex-row justify-end max-w-[1000px] md:hidden">
+      <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/menu/menu.svg" alt="menu-hamburguer" />
     </div>
 
+    <div id="menu-sair" class="hidden md:block md:py-[24px]">
+      <div class="self-center">
+        <ul class="flex flex-col items-center gap-2 md:flex-row md:justify-end text-center">
+          <li class="btn-links"><a href="index.html">Home</a></li>
+          <li class="btn-links"><a href="projects.html">Projects</a></li>
+          <li class="btn-links"><a href="about-me.html">About-me</a></li>
+          <img class="w-[24px]" src="src/assets/menu/dark.svg" alt="Dark mode icon" />
+        </ul>
+      </div>
+    </div>
 
-      <script type="module" src="src/components/loading-screen.js"></script>
+    <main>
+      <section>
+        <div class="flex flex-col gap-[32px]">
+          <h1 class="font-semibold text-3xl md:text-4xl mb-2 md:mb-6 lg:mt-[120px] lg:text-5xl">
+            Projects
+          </h1>
+          <nav class="mb-2 flex flex-col">
+            <ul class="overflow-x-auto whitespace-nowrap w-full justify-around md:justify-center flex flex-row">
+              <li class="btn-links-projects">All</li>
+              <li class="btn-links-projects">Projects</li>
+              <li class="btn-links-projects">UI/UX</li>
+              <li class="btn-links-projects">Front-end</li>
+              <li class="btn-links-projects">Mobile (React Native)</li>
+              <li class="btn-links-projects">Ilustrations</li>
+            </ul>
+          </nav>
+
+          <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,474px))] gap-6 justify-center">
+            <a href="https://dribbble.com/shots/26517507-M-dulo-Refeit-rio-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=M%C3%B3dulo%20Refeit%C3%B3rio%20%E2%80%93%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=M%C3%B3dulo%20Refeit%C3%B3rio%20%E2%80%93%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share"
+              target="_blank" rel="noopener" class="block" title="Módulo Refeitório – App UI Design in Figma">
+              <div
+                class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                <img src="src/assets/cards-projects/01.png" class="w-full rounded-xl"
+                  alt="Módulo Refeitório – App UI Design in Figma" />
+              </div>
+            </a>
+
+            <!-- card 02 -->
+            <a href="https://dribbble.com/shots/26517476-e-agro-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share"
+              target="_blank" class="block" title="e-agro App UI Design in Figma">
+              <div
+                class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                <img src="src/assets/cards-projects/02.png" class="w-full rounded-xl" alt="" />
+              </div>
+            </a>
+
+            <!-- card 03 -->
+            <a href="#" class="block" title="Project 3">
+              <div
+                class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                <img src="src/assets/cards-projects/03.png" class="w-full rounded-xl" alt="" />
+              </div>
+            </a>
+
+            <!-- card 04 -->
+            <a href="#" class="block" title="Project 4">
+              <div
+                class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                <img src="src/assets/cards-projects/04.png" class="w-full rounded-xl" alt="" />
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
+
+
+  <script type="module" src="src/components/loading-screen.js"></script>
   <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="src/js/main.js" type="module" defer></script>
-    <script src="src/components/swiper.js"></script>
-    <script src="src/components/menu.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="src/js/main.js" type="module" defer></script>
+  <script src="src/components/swiper.js"></script>
+  <script src="src/components/menu.js"></script>
+</body>
+
 </html>
