--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home | Geninho</title>
   <link rel="icon" type="icon" href="src/assets/favicon/favicon.ico" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-    rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -16,20 +13,23 @@
   <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
 </head>
 
-<body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
+<body class="relative bg-gradient-to-b from-[#292C34] to-[#0F1014] text-white">
+
+  <!-- fade lateral esquerda -->
+  <div class="absolute top-0 left-0 w-0 h-full bg-gradient-to-r from-[#0F1014] to-transparent"></div>
+
+  <!-- fade lateral direita -->
+  <div class="absolute top-0 right-0 h-full bg-gradient-to-l from-[#0F1014] to-transparent"></div>
+  </div>
 
 
-<!-- No <body> de qualquer página -->
-<loading-screen
-  src="src/assets/lottie/loading - chemistry.json"
-  width="180"
-  height="180"
-  speed="1">
-</loading-screen>
+  <!-- No <body> de qualquer página -->
+  <loading-screen src="src/assets/lottie/loading - chemistry.json" width="180" height="180" speed="1">
+  </loading-screen>
 
 
   <div id="content"
-    class="hidden opacity-0 transition-opacity duration-700 main-wrapper max-w-[1000px] px-4 mt-8 m-auto">
+    class="hidden opacity-0 transition-opacity duration-700 main-wrapper max-w-[1280px] px-4 mt-8 m-auto">
     <div class="flex flex-row justify-end max-w-[1280px] md:hidden">
       <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/menu/menu.svg" alt="menu-hamburguer" />
     </div>
@@ -37,128 +37,105 @@
     <div id="menu-sair" class="hidden md:block md:py-[24px]">
       <div class="self-center">
         <ul class="flex flex-col items-center gap-2 md:flex-row md:justify-end text-center">
-          <li class="btn-links"><a href="index.html">Home</a></li>
-          <li class="btn-links"><a href="projects.html">Projects</a></li>
-          <li class="btn-links"><a href="about-me.html">About-me</a></li>
-          <img class="w-[24px]" src="src/assets/menu/dark.svg" alt="Dark mode icon" />
+          <li class="font-secondary btn-links"><a href="index.html">Home</a></li>
+          <li class="font-secondary btn-links text-white/50"><a href="projects.html">Projects</a></li>
+          <li class="font-secondary btn-links text-white/50"><a href="about-me.html">About-me</a></li>
         </ul>
       </div>
     </div>
 
-    <main>
-      <div class="flex flex-col gap-6 mb-[64px]">
-        <h1
-          class="text-7xl mt-[96px] font-semibold font-primary text-center sm:text-[122px] md:text-[152px] lg:text-[192px] text-pink">
-          GENINHO
-        </h1>
-        <p
-          class="uppercase text-center text-[16px] leading-6 tracking-[2.2px] font-secondary font-medium lg:text-[22px]">
+    <main class="">
+      <div class=" flex flex-col gap-3 mb-[64px]">
+        
+        <div class="">
+
+          <h1
+            class=" text-7xl mt-[96px] font-semibold font-primary text-center sm:text-[122px] md:text-[152px] lg:text-[192px] text-pink">
+            GENINHO
+          </h1>
+          
+        </div>
+
+        <p class="uppercase text-center text-xl leading-6 tracking-[2.2px] font-secondary font-medium lg:text-[22px]">
           ux|ui design, Front end & App Developer.
         </p>
 
         <p
-          class="flex self-center text-center font-light leading-[24px] text-[16px] md:text-[18px] max-w-[840px] w-[100%] text-stone-400">
-          I'm a dedicated UI/UX Designer and aspiring Front-End Developer.
-          <br />I specialize in creating clean, user-centric interfaces,
-          transforming ideas into functional digital experiences. I'm
-          expanding my skills in HTML, CSS, JavaScript, React, and React
-          Native, aiming to combine design and development into integrated
-          solutions for web and mobile platforms.
+          class="font-secondary flex self-center text-center font-light mb-[16px] leading-[24px] text-[16px] md:text-[18px] max-w-[880px] w-[100%] text-stone-300">
+          I'm a dedicated UI/UX Designer and aspiring Front-End Developer, passionate about creating clean,
+          user-centric interfaces and transforming ideas into functional digital experiences for
+          web and mobile platforms.
         </p>
 
         <div class="flex flex-col md:flex-row self-center gap-[16px]">
-          <button type="button" class="btn-primary bg-white text-stone-950">
+          <button type="button" class="btn-primary bg-[#292C34] border-0 font-medium text-[#C0C4CE]">
             Projects
           </button>
           <a href="src/assets/Geninho_CV.pdf" download="Geninho_CV.pdf"
-            class="btn-primary text-white flex justify-center items-center">
+            class="btn-primary text-white font-medium flex justify-center items-center">
             Download CV
           </a>
         </div>
 
-        <div class="mt-[100px]">
+        <div class="flex justify-center mt-[76px]">
+          <img src="src/assets/hero/caret-double-down.svg" alt="">
+        </div>
+
+        <div class="mt-[100px] div-lateral-fade">
           <div class="flex flex-col gap-[26px]">
-            <h2 class="font-secondary text-neutral-600 tracking-[2.2px] text-[18px] font-medium text-center">
-              SKILLS
-            </h2>
             <div class="swiper mySwiper1">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/js.svg" alt="JavaScript Logo" />
+                  <img src="src/assets/skills/Tag-1.svg" alt="JavaScript Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/html.svg" alt="HTML5 Logo" />
+                  <img src="src/assets/skills/Tag-2.svg" alt="HTML5 Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/css.svg" alt="CSS3 Logo" />
+                  <img src="src/assets/skills/Tag-3.svg" alt="CSS3 Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/tailwind.svg" alt="Tailwind CSS Logo" />
+                  <img src="src/assets/skills/Tag-4.svg" alt="Tailwind CSS Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/sass1.svg" alt="Sass Logo" />
+                  <img src="src/assets/skills/Tag-6.svg" alt="Sass Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/git1.svg" alt="Git Logo" />
+                  <img src="src/assets/skills/Tag-5.svg" alt="Git Logo" />
                 </div>
               </div>
             </div>
             <div class="swiper mySwiper2">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/react1.svg" alt="React Logo" />
+                  <img src="src/assets/skills/Tag-1.svg" alt="JavaScript Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/react-native1.svg" alt="React Native Logo" />
+                  <img src="src/assets/skills/Tag-2.svg" alt="HTML5 Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/c++.svg" alt="C++ Logo" />
+                  <img src="src/assets/skills/Tag-3.svg" alt="CSS3 Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/python.svg" alt="Python Logo" />
+                  <img src="src/assets/skills/Tag-4.svg" alt="Tailwind CSS Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/java.svg" alt="Java Logo" />
+                  <img src="src/assets/skills/Tag-6.svg" alt="Sass Logo" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="src/assets/skills/php.svg" alt="Php Logo" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="src/assets/skills/nodejs1.svg" alt="NodeJs Logo" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper mySwiper3">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="src/assets/skills/figma1.svg" alt="Figma Logo" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="src/assets/skills/photoshop.svg" alt="photshop Logo" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="src/assets/skills/afterefects.svg" alt="aftereffetcs Logo" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="src/assets/skills/ilustrator.svg" alt="ilustrator Logo" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="src/assets/skills/blender1.svg" alt="Blender Logo" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="src/assets/skills/cinema4d.svg" alt="cinema4d Logo" />
+                  <img src="src/assets/skills/Tag-5.svg" alt="Git Logo" />
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <section class="mt-[100px]">
+        <section class="mt-[124px]">
           <h2 class="text-4xl font-semibold text-center mb-[32px]">
-            My Expertise
+            &lt;/&gt; My Expertise
           </h2>
           <div class="flex flex-col justify-around gap-7 xl:flex-row">
-            <div class="border-2 border-gray-600 xl:max-w-[330px]">
+            <div class="bg-[#292C3475] rounded-3xl xl:max-w-[360px] xl:max-h-[320px]">
               <div class="relative">
                 <div class="flex gap-6 py-[44px] px-[36px]">
                   <img src="src/assets/cards-skills/ux-ui.svg" alt="" />
@@ -172,18 +149,18 @@
               </div>
 
               <div class="mb-[44px]">
-                <span class="block mx-[32px] mb-[4px] text-gray-600">&lt;h3&gt;</span>
+                <span class="block mx-[32px] mb-[4px] text-gray-600">&lt;p&gt;</span>
                 <p class="border-l-2 border-gray-600 px-4 font-secondary font-normal text-[16px] mx-[49px]">
-                  Wireframing, <br />Prototyping, UI/UX, Design Systems,
+                  Wireframing, Prototyping, UI/UX, Design Systems,
                   Figma, LottieFilles.
                 </p>
-                <span class="block mx-[32px] mt-[4px] text-gray-600">&lt;/h3&gt;</span>
+                <span class="block mx-[32px] mt-[4px] text-gray-600">&lt;/p&gt;</span>
               </div>
             </div>
 
-            <div class="border-2 border-gray-600 xl:max-w-[328px]">
+            <div class="bg-[#292C3475] rounded-3xl xl:max-w-[360px] xl:max-h-[320px]">
               <div class="relative">
-                <div class="flex gap-6 py-[44px] px-[36px]">
+                <div class="flex gap-6 py-[36px] px-[36px]">
                   <img src="src/assets/cards-skills/react.svg" alt="" />
                   <img class="absolute px-[61px] py-[20px]" src="src/assets/cards-skills/bar-blue.svg"
                     alt="React & NextJS Expertise Bar" />
@@ -194,17 +171,17 @@
               </div>
 
               <div class="mb-[44px]">
-                <span class="block mx-[32px] mb-[4px] text-gray-600">&lt;h3&gt;</span>
+                <span class="block mx-[32px] mb-[4px] text-gray-600">&lt;p&gt;</span>
                 <p class="border-l-2 border-gray-600 px-4 font-secondary font-normal text-[16px] mx-[49px]">
-                  Passionate about UI/UX. I'm just getting started with
+                  Passionate about UI/UX. <br> I'm just getting started with
                   development using HTML, CSS, JS, React, and NextJS
                   frameworks.
                 </p>
-                <span class="block mx-[32px] mt-[4px] text-gray-600">&lt;/h3&gt;</span>
+                <span class="block mx-[32px] mt-[4px] text-gray-600">&lt;/p&gt;</span>
               </div>
             </div>
 
-            <div class="border-2 border-gray-600">
+            <div class="bg-[#292C3475] rounded-3xl xl:max-w-[360px] xl:max-h-[320px]">
               <div class="relative">
                 <div class="flex gap-6 py-[44px] px-[36px]">
                   <img src="src/assets/cards-skills/react.svg" alt="" />
@@ -217,12 +194,12 @@
               </div>
 
               <div class="mb-[44px]">
-                <span class="block mx-[32px] mb-[4px] text-gray-600">&lt;h3&gt;</span>
+                <span class="block mx-[32px] mb-[4px] text-gray-600">&lt;p&gt;</span>
                 <p class="border-l-2 border-gray-600 px-4 font-secondary font-normal text-[16px] mx-[49px]">
                   Skilled in developing hybrid mobile apps and cross-platform
                   solutions using the React Native framework.
                 </p>
-                <span class="block mx-[32px] mt-[4px] text-gray-600">&lt;/h3&gt;</span>
+                <span class="block mx-[32px] mt-[4px] text-gray-600">&lt;/p&gt;</span>
               </div>
             </div>
           </div>
