--- a/projects.html
+++ b/projects.html
@@ -6,19 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About-me | Geninho</title>
   <link rel="icon" type="icon" href="src/assets/favicon/favicon.ico" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-    rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="src/css/style.css" />
+    <link href="src/css/output.css" rel="stylesheet">
 </head>
 
 <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
 
   <div id="content"
-    class="hidden opacity-0 transition-opacity duration-700 main-wrapper max-w-[1000px] px-[14px] mt-[32px] m-auto">
+    class="main-wrapper max-w-[1000px] px-[14px] mt-[32px] m-auto">
     <div class="flex flex-row justify-end max-w-[1000px] md:hidden">
       <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/menu/menu.svg" alt="menu-hamburguer" />
     </div>
